# rust-explorations

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  askama.toml  docker-compose.yaml  generate_mongo_env.sh  run_site_dev.sh  run_site_prod.sh
.github/workflows/: rust.yml
examples/: make_tiles.rs
examples/curl/: post_and_get_image.sh
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs
mongo/: init.js
res/templates/: index.html
server/: Cargo.toml
server/examples/curl/: 2x2ident.json  3456.json  post_matrices_and_multiply.sh
server/res/templates/: index.html
server/secrets/: mongo-env.txt  mongo-pw.txt
server/src/: axum_helpers.rs  main.rs  utoipa_helpers.rs  web_api.rs  web_appstate.rs  web_routines.rs  window_iterator.rs  wrappers.rs
src/: absolute_basics.rs  array_slicer.rs  axum.rs  buffer_element.rs  circular_buffer.rs  dims.rs  dyn_matrix.rs  either.rs  element.rs  errors.rs  from_mat.rs  ipr.rs  lib.rs  main.rs  matrices_serde.rs  matrix.rs  matrix_type.rs  my_image.rs  my_traits.rs  serde.rs  serialization.rs  utoipa.rs  web_api.rs  web_appstate.rs  web_routines.rs  window_iterator.rs
