[package]
name = "jnickg_rust_explorations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jnickg_imaging"
path = "src/lib.rs"

[dependencies]
axum = "0.7.5"
num = "0.4.1"
rocket = "0.5.0"
rstest = "0.19.0"
rtest = "0.1.4"
tokio = { version = "1.37.0", features = ["full"] }
