[package]
name = "jnickg_tile_client"
version = "0.1.0"
edition = "2021"

[dependencies]
jnickg_imaging = { path = "../library" }
console_error_panic_hook = "0.1.7"
gloo-net = "0.5.0"
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
base64 = "0.22.1"
gloo = "0.11.0"
js-sys = "0.3.69"
image = "0.25.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "File",
    "DragEvent",
    "DataTransfer",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
