[package]
name = "jnickg_tile_server"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

[dependencies]
jnickg_imaging = { path = "../library" }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
auto-impl-ops = "0.2.1"
axum = "0.7.5"
brotli = "6.0.0"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
futures-util = "0.3.30"
image = "0.25.1"
image-pyramid = "0.2.2"
itertools = "0.12.1"
mongodb = "2.8.2"
num = "0.4.1"
rand = "0.8.5"
rayon = "1.10.0"
rtest = "0.1.4"
serde = { version = "1.0.198", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
test-case = "3.3.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = "1.8.0"
